---------------------------------------------------------------------------------------------------
Version: 1.2.4
Date: 2021-09-22
  Bugfixes:
    - Fixed potential for corruption in next().
    - Re-selecting the contents of a blueprint works correctly, if you open it by right-clicking a blueprint in your inventory. (Opening it from the blueprint library or a blueprint book still fails.)
---------------------------------------------------------------------------------------------------
Version: 1.2.3
Date: 2021-09-07
  Bugfixes:
    - Fixed copy tool sometimes forgetting settings.
---------------------------------------------------------------------------------------------------
Version: 1.2.2
Date: 2021-08-26
  Bugfixes:
    - Fixed error when upgrading from old versions.
---------------------------------------------------------------------------------------------------
  Version: 1.2.1
  Date: 2021-07-03
    Features:
      - Resource scanner detects enemy bases.
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2021-07-03
  Bugfixes:
    - Fixed incorrect coordinates in resource scanner area defined by top left corner.
    - Fixed resource scanner missing 1 tile width of water.
---------------------------------------------------------------------------------------------------
Version: 1.1.9
Date: 2021-07-02
  Features:
    - Added resource scanner.
---------------------------------------------------------------------------------------------------
Version: 1.1.8
Date: 2021-06-01
  Changes:
    - Reduced deployer chest CPU usage by 40%.
---------------------------------------------------------------------------------------------------
Version: 1.1.7
Date: 2021-05-17
  Bugfixes:
    - Fixed error when destroying certain buildings from other mods.
---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: 2021-05-16
  Bugfixes: